# duplicity-auto

./: .gitignore  CMakeLists.txt  README.md  autocore.cpp  autocore.h  handle.cpp  handle.hpp  main.cpp
